fixed tag overflow in post lists

--- a/bibsonomy-webapp/src/main/webapp/resources/css/style.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/style.css
@@ -1444,7 +1444,7 @@ Most actions appear in three ways
 	padding-right: 0.5ex;
 }
 
-.post .ptags>ul.tags {
+.post .ptags ul.tags {
     display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
